# CG_project

./: CMakeLists.txt  README.md
cmake/: CMakeDemo-config.cmake  FindCMakeDemo.cmake
include/: CMakeLists.txt  ImageQuality.hpp
src/: CMakeLists.txt  ImageQuality.cpp  main.cpp
tests/: CMakeLists.txt  test_cmake_demo.cpp
